--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 Mako==1.3.5
-python-dateutil==2.9.2
+python-dateutil==2.9.0.post0
 python-editor==1.0.4
 Click==8.1.7
 WTForms==3.0.1
